--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["Corentin Dancette <corentin.dancette@raidium.fr>"]
 readme = "README.md"
-
+package-mode = false
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 requests = "^2.31.0"
 python-dotenv = "^1.0.1"
 
