--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python-dotenv = "^1.0.1"
 flask = "^3.0.2"
 
 
+[tool.poetry.group.dev.dependencies]
+ipdb = "^0.13.13"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
